placed the nav and footer to remain and stay at the top and bottom of page respectively. Created margins for top and bottom divs in section to ensure no content overlap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 /* https://fonts.google.com/specimen/Dosis?sort=popularity&sidebar.open&selection.family=Dosis:wght@200;300;400;500;600;700;800|Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800 */
-
+/* https://cdn.pixabay.com/photo/2017/07/01/19/48/background-2462435_960_720.jpg */
 html > body {
     background: url("/assets/img/background.jpg") no-repeat center center fixed; 
     -webkit-background-size: cover;
@@ -26,6 +26,13 @@ html > body {
 
 /* Main Content */
 
+.top-div-margin {
+    margin-top: 95px;
+}
+
+.bottom-div-margin {
+    margin-bottom: 75px;
+}
 
 /* Footer Styling */
 .icon-style {
